--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
     </div></div>
     
      <div class="flex">
-   <div class="flex1">   <div class="men"><img src="/project/Assets/Images/men.webp" alt="">
+   <div class="flex1">   <div class="men">
+    <img src="./Assets/Images/men.webp" alt="">
     <div class="text">
       <h3>M</h3>
       <h3>I</h3>
@@ -222,10 +223,10 @@
       <h3>I</h3>
       <h3>G</h3>
       
-      <img src="/project/Assets/Images/diamond.png" alt="">
+      <img src="./Assets/Images/diamond.png" alt="">
     </div>
   </div>
-   <div class="men"><img src="/project/Assets/Images/women.webp" alt="">
+   <div class="men"><img src="./Assets/Images/women.webp" alt="">
     <div class="text">
       <h3>M</h3>
       <h3>I</h3>
