--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <h3>I</h3>
       <h3>G</h3>
       
-      <img src="/project/Assets/Images/diamond.png" alt="">
+      <img src="./Assets/Images/diamond.png" alt="">
     </div>
   </div>
 </div>
